test/corpus/role.txt
================================================================================
Single Role
================================================================================

Vacation ABC-123 Have a good one!

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
Single Role with numeric project
================================================================================

Foo 123456 A. and B.

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
All numeric role
================================================================================

123 456 789

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
Multiple Roles
================================================================================

Vacation ABC-123 Have a good one!
Sick SICK-001 Get well soon!

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description))
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
Multiple Roles with Comment
================================================================================

Vacation ABC-123 Have a good one!
# Foo Bar This is not a role
Sick SICK-001 Get well soon!

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description))
  (line_comment)
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
Role without description does not swallow next line
================================================================================

Vacation ABC-123
Sick SICK-001 Get well soon!

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project))
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
Role without description does not swallow indented next line
================================================================================

Vacation ABC-123
  Sick SICK-001 Get well soon!

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project))
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))

================================================================================
Role with trailing whitespace does not swallow next line
================================================================================

Vacation ABC-123 
Sick SICK-001 Get well soon!

--------------------------------------------------------------------------------

(document
  (role
    role_alias: (alias)
    role_project: (project))
  (role
    role_alias: (alias)
    role_project: (project)
    role_description: (description)))
